--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+ 
 }
 
 #header-projects {
@@ -78,6 +79,11 @@ p {
 #nav-bar ul li a:hover, #footer ul li a:hover {
     background-color: #e6b800;
     color: black;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -190,6 +196,7 @@ h2 {
     margin-top: 4rem;
 }
 
+
 #email-podcast {
     color: #e6b800;
     text-decoration: none;
@@ -197,6 +204,10 @@ h2 {
     margin-top: 2rem;
     text-align: center;
     transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    display: block;
+    max-width: 100%;
 }
 
 #email-podcast:hover {
@@ -239,6 +250,7 @@ html {
     .project-card {
         width: 95%;
     }
+
 }
 
 @media (max-width: 768px) {
@@ -266,6 +278,7 @@ html {
     .project-card {
         width: 95%;
     }
+    
 }
 
 @media (min-width: 1200px) {
@@ -288,4 +301,10 @@ html {
     .project-card {
         width: 95%;
     }
+   
 }
+
+
+
+
+
