--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -196,6 +196,22 @@ h2 {
     margin-top: 4rem;
 }
 
+#podcast-message {
+    text-decoration: none;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    text-align: center;
+    transition: text-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    display: block;
+    max-width: 100%;
+}
+
+#podcast-message {
+    text-shadow: 0 0 10px #7EBDC2, 0 0 20px #D4AF37;
+    transform: scale(1.1);
+}
 
 #email-podcast {
     color: #e6b800;
